Fix the time float window being hidden underneath other divs.

--- a/public/me-js/skin/mediaelementplayer.css
+++ b/public/me-js/skin/mediaelementplayer.css
@@ -299,7 +299,7 @@
   top: 16px;
   margin-left: -18px;
   text-align: center;
-  
+  z-index: 1;
   background: #000;
   color: #e0e0e0;
 }
